--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,11 +54,13 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Email..."
+        android:paddingLeft="20dp"
         android:inputType="textPersonName" />
 
     <EditText
         android:background="@drawable/edit_text_style"
         android:hint="Password"
+        android:paddingLeft="20dp"
         android:id="@+id/etLPass"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
@@ -76,9 +78,32 @@
         android:layout_marginRight="55dp"
         android:layout_gravity="right"
         android:text="LOGIN"
+        android:textSize="15sp"
         android:textColor="@color/background"
         android:textStyle="bold"
         android:fontFamily="sans-serif-smallcaps"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_height="wrap_content"
+            android:text="Belum Punya Akun?"
+            android:layout_gravity="center"
+            android:textSize="15sp" />
 
+        <TextView
+            android:id="@+id/tvSignup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Daftar Disini"
+            android:textColor="@color/biru"
+            android:layout_gravity="center"
+            android:paddingLeft="8dp"
+            android:textSize="15sp" />
+        </LinearLayout>
 </LinearLayout>
