--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,20 +17,120 @@
         android:textSize="20dp"
         android:textColor="@color/button"
         android:textStyle="bold"/>
-    <RelativeLayout
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NIM"
-            android:layout_marginTop="40dp"
+            android:textSize="15sp"
+            android:layout_marginTop="35dp"
             android:layout_marginLeft="40dp"/>
 
-    </RelativeLayout>
+        <EditText
+            android:background="@drawable/edit_text_style"
+            android:id="@+id/etRNim"
+            android:layout_width="300dp"
+            android:layout_marginTop="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nama"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="40dp"/>
 
+        <EditText
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edit_text_style"
+            android:id="@+id/etRnama"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jurusan/Prodi"
+            android:layout_marginTop="15dp"
+            android:textSize="15sp"
+            android:layout_marginLeft="40dp"/>
+
+        <EditText
+            android:background="@drawable/edit_text_style"
+            android:id="@+id/etRjurusan"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="35dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="40dp"/>
+
+        <EditText
+            android:background="@drawable/edit_text_style"
+            android:id="@+id/etREmail"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="35dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Tlpn"
+            android:layout_marginTop="15dp"
+            android:textSize="15sp"
+            android:layout_marginLeft="40dp"/>
+
+        <EditText
+            android:background="@drawable/edit_text_style"
+            android:id="@+id/etRNotlp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="35dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <Button
+                android:background="@drawable/button_cancel_style"
+                android:id="@+id/btnSignup"
+                android:layout_width="120dp"
+                android:layout_marginLeft="85dp"
+                android:layout_marginRight="15dp"
+                android:layout_height="50dp"
+                android:textColor="@color/background"
+                android:textSize="15sp"
+                android:text="Cancel"/>
+
+            <Button
+                android:background="@drawable/button_style"
+                android:id="@+id/btnRCancel"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:textColor="@color/background"
+                android:textSize="15sp"
+                android:text="SignUp"/>
+        </LinearLayout>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
