--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="background">#ffff</color>
     <color name="button">#fa8a48</color>
     <color name="abu">#fafafa</color>
-    <color name="cancel">#807c7c</color>
+    <color name="cancel">#a39d9d</color>
     <color name="biru">#225eec</color>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
