--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,13 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".homeActivity">
 
+
     <TextView
+        android:id="@+id/TextHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Home"
+        android:textSize="28dp"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <Button
+        android:id="@+id/ButtonKiri1"
+        android:layout_width="108dp"
+        android:layout_height="81dp"
+        android:text="List Buku"
+        android:textSize="18dp"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/ButtonKanan1"
+        app:layout_constraintTop_toBottomOf="@+id/TextHome"
+        android:layout_marginTop="108dp"
+        android:layout_marginRight="81dp"
+        />
+
+    <Button
+        android:id="@+id/ButtonKanan1"
+        android:layout_width="108dp"
+        android:layout_height="81dp"
+        android:text="Profile"
+        android:textSize="18dp"
+
+        app:layout_constraintLeft_toLeftOf="@id/ButtonKiri1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextHome"
+        android:layout_marginTop="108dp"
+        android:layout_marginLeft="81dp"
+        />
+
+    <Button
+        android:id="@+id/ButtonKiri2"
+        android:layout_width="108dp"
+        android:layout_height="81dp"
+        android:text="List Buku"
+        android:textSize="18dp"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/ButtonKanan2"
+        app:layout_constraintTop_toBottomOf="@+id/ButtonKiri1"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="81dp"
+        />
+
+    <Button
+        android:id="@+id/ButtonKanan2"
+        android:layout_width="108dp"
+        android:layout_height="81dp"
+        android:text="Profile"
+        android:textSize="18dp"
+
+        app:layout_constraintLeft_toLeftOf="@id/ButtonKiri2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ButtonKiri1"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="81dp"
+        />
 
 </android.support.constraint.ConstraintLayout>
