--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".homeActivity">
 
     <TextView
@@ -11,11 +13,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tambah Buku"
+        android:textStyle="bold"
         android:textSize="28dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/button"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         />
 
     <TextView
@@ -24,21 +26,18 @@
         android:layout_height="wrap_content"
         android:text="Judul"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextTambahBuku"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="35dp"
         />
 
     <EditText
+        android:background="@drawable/edit_text_style"
         android:id="@+id/etJudulBuku"
         android:layout_height="wrap_content"
-        android:layout_width="280dp"
+        android:layout_width="310dp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="10dp"
 
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Judul"
         />
 
     <TextView
@@ -47,21 +46,17 @@
         android:layout_height="wrap_content"
         android:text="Pengarang"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Judul"
-        android:layout_marginTop="52dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="35dp"
         />
 
     <EditText
+        android:background="@drawable/edit_text_style"
         android:id="@+id/etPengarangBuku"
-        android:layout_height="wrap_content"
-        android:layout_width="300dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Pengarang"
+        android:layout_height="80dp"
+        android:layout_width="310dp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="10dp"
         />
 
 
@@ -71,45 +66,43 @@
         android:layout_height="wrap_content"
         android:text="Tahun Buku"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Pengarang"
-        android:layout_marginTop="52dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="35dp"
         />
 
     <EditText
+        android:background="@drawable/edit_text_style"
         android:id="@+id/etTahunBuku"
         android:layout_height="wrap_content"
         android:layout_width="300dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TahunBuku"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="33dp"
         />
 
-    <Button
-        android:id="@+id/ButtonTambahBuku"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="150dp"
-        android:text="Tambah Buku"
+        android:orientation="horizontal">
 
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="52dp"
-        android:layout_marginRight="30dp"
+        <Button
+            android:background="@drawable/button_cancel_style"
+            android:id="@+id/btnTBCancel"
+            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:text="Batal"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="79dp"
         />
 
-    <Button
-        android:id="@+id/ButtonKemabliTambahBuku"
-        android:layout_height="wrap_content"
-        android:layout_width="150dp"
-        android:text="Kembali"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="52dp"
-        android:layout_marginLeft="30dp"
+        <Button
+            android:background="@drawable/button_style"
+            android:id="@+id/btnTBTambah"
+            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:text="Tambah"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="13dp"
         />
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
