--- a/app/src/main/res/layout/activity_pinjam_buku.xml
+++ b/app/src/main/res/layout/activity_pinjam_buku.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".homeActivity">
 
     <TextView
@@ -12,57 +14,121 @@
         android:layout_height="wrap_content"
         android:text="Pinjam Buku"
         android:textSize="28dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
         />
 
     <TextView
         android:id="@+id/KodeBuku"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Kode Buku"
-        android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextPinjamBuku"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="24dp"
+        android:textSize="20dp"
+        android:layout_marginTop="30dp"
         />
 
     <EditText
+        android:background="@drawable/edit_text_style"
         android:id="@+id/etCodeBukuPinjaman"
         android:layout_height="wrap_content"
         android:layout_width="280dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/KodeBuku"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         />
 
     <Button
-        android:id="@+id/ButtonTambahBuku"
+        android:id="@+id/btnCek"
+        android:background="@drawable/button_style"
         android:layout_height="wrap_content"
-        android:layout_width="150dp"
+        android:layout_gravity="right"
+        android:layout_width="110dp"
+        android:text="Cek"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/background"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="50dp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginBottom="10dp"
+        android:text="Judul Buku"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/txtJudul"
+        android:background="@drawable/edit_text_style"
+        android:layout_width="320dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="Pengarang"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/txtPengarang"
+        android:background="@drawable/edit_text_style"
+        android:layout_width="320dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginBottom="10dp"
+        android:text="Tahun"
+        android:textSize="15sp"/>
+
+    <TextView
+        android:id="@+id/txtTahun"
+        android:background="@drawable/edit_text_style"
+        android:layout_width="320dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
+    android:orientation="horizontal">
+
+    <Button
+        android:id="@+id/btnBatal"
+        android:background="@drawable/button_cancel_style"
+        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:textColor="@color/background"
+        android:text="Batal"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="70dp"
+        />
+
+    <Button
+        android:id="@+id/btnPinjam"
+        android:background="@drawable/button_style"
+        android:layout_height="wrap_content"
+        android:layout_width="110dp"
         android:text="Pinjam Buku"
-
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="52dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/background"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="10dp"
         />
 
-    <Button
-        android:id="@+id/ButtonKemabliTambahBuku"
-        android:layout_height="wrap_content"
-        android:layout_width="150dp"
-        android:text="Kembali"
+</LinearLayout>
 
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="52dp"
-        android:layout_marginLeft="30dp"
-        />
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
