--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -113,23 +113,23 @@
 
             <Button
                 android:background="@drawable/button_cancel_style"
-                android:id="@+id/btnSignup"
+                android:id="@+id/btnRCancel"
                 android:layout_width="120dp"
                 android:layout_marginLeft="85dp"
                 android:layout_marginRight="15dp"
                 android:layout_height="50dp"
                 android:textColor="@color/background"
                 android:textSize="15sp"
-                android:text="Cancel"/>
+                android:text="Batal"/>
 
             <Button
                 android:background="@drawable/button_style"
-                android:id="@+id/btnRCancel"
+                android:id="@+id/btnRDaftar"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:textColor="@color/background"
                 android:textSize="15sp"
-                android:text="SignUp"/>
+                android:text="Daftar"/>
         </LinearLayout>
     </LinearLayout>
     </ScrollView>
