--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".homeActivity">
 
 
@@ -13,66 +14,77 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:textSize="28dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
         />
 
     <Button
-        android:id="@+id/ButtonKiri1"
-        android:layout_width="108dp"
-        android:layout_height="81dp"
-        android:text="List Buku"
+        android:id="@+id/btnProfilHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Profil"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/ButtonKanan1"
-        app:layout_constraintTop_toBottomOf="@+id/TextHome"
-        android:layout_marginTop="108dp"
-        android:layout_marginRight="81dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_style"
+        android:onClick="onClick"
         />
 
     <Button
-        android:id="@+id/ButtonKanan1"
-        android:layout_width="108dp"
-        android:layout_height="81dp"
-        android:text="Profile"
+        android:id="@+id/btnDaftarBukuHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Daftar Buku"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="@id/ButtonKiri1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TextHome"
-        android:layout_marginTop="108dp"
-        android:layout_marginLeft="81dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_style"
+        android:onClick="onClick"
         />
 
     <Button
-        android:id="@+id/ButtonKiri2"
-        android:layout_width="108dp"
-        android:layout_height="81dp"
-        android:text="List Buku"
+        android:id="@+id/btnPinjamBukuHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pinjam Buku"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/ButtonKanan2"
-        app:layout_constraintTop_toBottomOf="@+id/ButtonKiri1"
-        android:layout_marginTop="24dp"
-        android:layout_marginRight="81dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_style"
+        android:onClick="onClick"
         />
 
     <Button
-        android:id="@+id/ButtonKanan2"
-        android:layout_width="108dp"
-        android:layout_height="81dp"
-        android:text="Profile"
+        android:id="@+id/btnTambahBukuHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tambah Buku"
         android:textSize="18dp"
-
-        app:layout_constraintLeft_toLeftOf="@id/ButtonKiri2"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ButtonKiri1"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="81dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_style"
+        android:onClick="onClick"
         />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnAboutHome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="About"
+        android:textSize="18dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/button_style"
+        android:onClick="onClick"
+        />
+
+</LinearLayout>
