--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,102 +7,172 @@
     android:background="@color/background"
     android:orientation="vertical"
     tools:context=".homeActivity">
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/TextTambahBuku"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tambah Buku"
-        android:textStyle="bold"
-        android:textSize="28dp"
-        android:textColor="@color/button"
-        android:layout_marginTop="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
-        />
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="10dp"
+        android:text="Tambah Buku"
+        android:textColor="@color/button"
+        android:textSize="28dp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TextTambahBuku"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="21dp"
+        android:background="@color/background"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="46dp"
+            android:layout_marginEnd="10dp"
+            />
+
+        <EditText
+            android:id="@+id/namaFile"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/edit_text_style"
+            android:gravity="center|bottom"
+            android:text="Nama File" />
+
+        <Button
+            android:id="@+id/btnTmbahGambarBuku"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/button_style"
+            android:text="Upload"/>
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progresbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 
     <TextView
         android:id="@+id/Judul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="274dp"
+        android:layout_marginEnd="252dp"
         android:text="Judul"
-        android:textSize="18dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="35dp"
-        />
+        android:textSize="18dp" />
 
     <EditText
-        android:background="@drawable/edit_text_style"
         android:id="@+id/etJudulBuku"
-        android:layout_height="wrap_content"
         android:layout_width="310dp"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="10dp"
-
-        />
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginEnd="34dp"
+        android:background="@drawable/edit_text_style" />
 
     <TextView
         android:id="@+id/Pengarang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="252dp"
         android:text="Pengarang"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="35dp"
-        />
+        android:textSize="18dp" />
 
     <EditText
-        android:background="@drawable/edit_text_style"
         android:id="@+id/etPengarangBuku"
-        android:layout_height="80dp"
         android:layout_width="310dp"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_height="80dp"
+        android:layout_alignParentStart="true"
+
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="310dp"
+        android:layout_marginEnd="34dp"
+        android:background="@drawable/edit_text_style" />
 
 
     <TextView
         android:id="@+id/TahunBuku"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/etJudulBuku"
+        android:layout_alignParentTop="true"
+
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="405dp"
         android:text="Tahun Buku"
-        android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="35dp"
-        />
+        android:textSize="18dp" />
 
     <EditText
-        android:background="@drawable/edit_text_style"
         android:id="@+id/etTahunBuku"
-        android:layout_height="wrap_content"
         android:layout_width="300dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="33dp"
-        />
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="439dp"
+        android:layout_marginEnd="34dp"
+        android:background="@drawable/edit_text_style" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/etTahunBuku"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp"
         android:orientation="horizontal">
 
         <Button
-            android:background="@drawable/button_cancel_style"
-            android:id="@+id/btnTBCancel"
-            android:layout_height="wrap_content"
+            android:id="@+id/btnTBTambah"
             android:layout_width="120dp"
-            android:text="Batal"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="79dp"
-        />
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style"
+            android:layout_marginLeft="100dp"
+            android:text="Tambah"
+            />
 
         <Button
-            android:background="@drawable/button_style"
-            android:id="@+id/btnTBTambah"
-            android:layout_height="wrap_content"
+            android:id="@+id/btnTBCancel"
             android:layout_width="120dp"
-            android:text="Tambah"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="13dp"
-        />
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_cancel_style"
+            android:layout_marginLeft="12dp"
+            android:text="Batal" />
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
+</RelativeLayout>
