--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ID Buku"
-        android:textSize="18dp"/>
+        android:textSize="18dp"
+        />
 
     <TextView
         android:id="@+id/tv_pengarangBuku"
