--- a/app/src/main/res/drawable/grad_bg.xml
+++ b/app/src/main/res/drawable/grad_bg.xml
@@ -4,7 +4,7 @@ xmlns:android1="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
 
 <gradient
-    android:anggle="0"
+    android:angle="0"
     android1:endColor="@color/gradStop"
     android1:startColor="@color/gradStart"
     android1:type="linear" />
